--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: ng build shongo-calendar --configuration=production
+      - run: npm run build:lib
 
   publish-gpr:
     needs: build
