--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cesnet/shongo-calendar",
-  "version": "15.0.2",
+  "version": "16.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/CESNET/shongo-calendar"
@@ -28,42 +28,42 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
-    "angular-calendar": "^0.31.0",
-    "moment": "^2.29.4",
-    "rxjs": "~7.5.0",
-    "zone.js": "~0.12.0",
-    "bootstrap": "^5.3.0-alpha1",
-    "@angular-devkit/build-angular": "^15.0.5",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.0.4",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular-devkit/build-angular": "^16.2.6",
+    "@angular-eslint/builder": "16.2.0",
+    "@angular-eslint/eslint-plugin": "16.2.0",
+    "@angular-eslint/eslint-plugin-template": "16.2.0",
+    "@angular-eslint/schematics": "16.2.0",
+    "@angular-eslint/template-parser": "16.2.0",
+    "@angular/animations": "^16.2.9",
+    "@angular/cli": "~16.2.6",
+    "@angular/common": "^16.2.9",
+    "@angular/compiler": "^16.2.9",
+    "@angular/compiler-cli": "^16.2.9",
+    "@angular/core": "^16.2.9",
+    "@angular/forms": "^16.2.9",
+    "@angular/platform-browser": "^16.2.9",
+    "@angular/platform-browser-dynamic": "^16.2.9",
+    "@angular/router": "^16.2.9",
     "@types/jasmine": "~4.3.0",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
-    "eslint": "^8.33.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "angular-calendar": "^0.31.0",
+    "bootstrap": "^5.3.2",
+    "eslint": "^8.51.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^15.0.0",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "stylelint": "^15.2.0",
-    "stylelint-config-standard": "^30.0.1",
-    "stylelint-config-standard-scss": "^7.0.1",
-    "typescript": "~4.8.2"
+    "moment": "^2.29.4",
+    "ng-packagr": "^16.2.3",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "rxjs": "~7.5.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "typescript": "^5.1.6",
+    "zone.js": "~0.13.3"
   }
 }
